<resources>
    <string name="app_name">Migoto</string>
    <string name="menu_alarm">Alarm</string>
    <string name="menu_timeline">Timeline</string>
    <string name="menu_timer">Timer</string>
    <string name="menu_settings">Settings</string>
    <string name="no_alarm_set">No alarms set</string>
    <string name="list_item_alarm_mission_text">Mission</string>
    <string name="list_item_alarm_ringtone_text">Ringtone</string>
    <string name="list_item_alarm_vibrate_text">Vibrate</string>
    <string name="list_item_alarm_mission_value1">Shake</string>
    <string name="list_item_alarm_mission_value2">Math</string>
    <string name="list_item_alarm_mission_value3">Memory</string>
    <string name="list_item_alarm_ringtone_value1">Ringtone 1</string>
    <string name="list_item_alarm_ringtone_value2">Ringtone 2</string>
    <string name="list_item_alarm_ringtone_value3">Ringtone 3</string>
    <string name="list_item_alarm_ringtone_value4">Ringtone 4</string>
    <string name="list_item_alarm_vibrate_valueOn">On</string>
    <string name="list_item_alarm_vibrate_valueOff">Off</string>
    <string name="fac_alarm_title_text">Alarm Title</string>
    <string name="fac_bedtime_title_text">BedTime</string>
    <string name="fac_mission_title_text">Mission</string>
    <string name="fac_ringtone_title_text">Ringtone</string>
    <string name="fac_vibrate_title_text">Vibrate</string>
    <string name="fac_mission_details_text1">Shake</string>
    <string name="fac_mission_details_text2">Math</string>
    <string name="fac_mission_details_text3">Memory</string>
    <string name="fac_ringtone_details_text1">Ringtone 1</string>
    <string name="fac_ringtone_details_text2">Ringtone 2</string>
    <string name="fac_ringtone_details_text3">Ringtone 3</string>
    <string name="fac_ringtone_details_text4">Ringtone 4</string>
    <string name="fac_save_btn_text">Save</string>
    <string name="edit_alarm_success_msg">Alarm clock updated!</string>
    <string name="eabsam_mission_title">Mission</string>
    <string name="eabsam_shake_title">Shake</string>
    <string name="eabsam_math_title">Math</string>
    <string name="eabsam_memory_title">Memory</string>
    <string name="eabsam_btnCancel_text">Cancel</string>
    <string name="eabsam_btnOk_text">OK</string>
    <string name="eabsar_ringtone_title">Ringtone</string>
    <string name="eabsar_ringtone1_title">Ringtone 1</string>
    <string name="eabsar_ringtone2_title">Ringtone 2</string>
    <string name="eabsar_ringtone3_title">Ringtone 3</string>
    <string name="eabsar_ringtone4_title">Ringtone 4</string>
    <string name="eabsar_btnCancel_text">Cancel</string>
    <string name="eabsar_btnOk_text">OK</string>
    <string name="eabsat_label_title">Label</string>
    <string name="eabsat_edit_text_hint">Please enter a label</string>
    <string name="eabsat_btnCancel_text">Cancel</string>
    <string name="eabsat_btnOk_text">OK</string>
    <string name="caa_alarm_title_text">Alarm Title</string>
    <string name="caa_bedtime_title_text">BedTime</string>
    <string name="caa_mission_title_text">Mission</string>
    <string name="caa_ringtone_title_text">Ringtone</string>
    <string name="caa_vibrate_title_text">Vibrate</string>
    <string name="caa_mission_details_text1">Shake</string>
    <string name="caa_mission_details_text2">Math</string>
    <string name="caa_mission_details_text3">Memory</string>
    <string name="caa_ringtone_details_text1">Ringtone 1</string>
    <string name="caa_ringtone_details_text2">Ringtone 2</string>
    <string name="caa_ringtone_details_text3">Ringtone 3</string>
    <string name="caa_ringtone_details_text4">Ringtone 4</string>
    <string name="caa_save_btn_text">Save</string>
    <string name="cabsam_mission_title">Mission</string>
    <string name="cabsam_shake_title">Shake</string>
    <string name="cabsam_math_title">Math</string>
    <string name="cabsam_memory_title">Memory</string>
    <string name="cabsam_btnCancel_text">Cancel</string>
    <string name="cabsam_btnOk_text">OK</string>
    <string name="cabsar_ringtone_title">Ringtone</string>
    <string name="cabsar_ringtone1_title">Ringtone 1</string>
    <string name="cabsar_ringtone2_title">Ringtone 2</string>
    <string name="cabsar_ringtone3_title">Ringtone 3</string>
    <string name="cabsar_ringtone4_title">Ringtone 4</string>
    <string name="cabsar_btnCancel_text">Cancel</string>
    <string name="cabsar_btnOk_text">OK</string>
    <string name="cabsat_label_title">Label</string>
    <string name="cabsat_edit_text_hint">Please enter a label</string>
    <string name="cabsat_btnCancel_text">Cancel</string>
    <string name="cabsat_btnOk_text">OK</string>
    <string name="no_title_set">None</string>
    <string name="no_challenges_record">No challenges record</string>
    <string name="complete_challenge_status_text">You\'ve completed a challenge!</string>
    <string name="fail_challenge_status_text">You\'ve failed a challenge!</string>
    <string name="settings_main_title">Settings</string>
    <string name="settings_profile_card_title">Profile</string>
    <string name="settings_profile_username_label">Username</string>
    <string name="settings_profile_username_value">User</string>
    <string name="usernameTextView">Username</string>
    <string name="username_desc_textView2">Tell us how shall we address you</string>
    <string name="username_input">your name</string>
    <string name="settings_username_btnCancel">Cancel</string>
    <string name="settings_username_btnOK">OK</string>
    <string name="settings_profile_birthday_label">Birthday</string>
    <string name="settings_profile_birthday_value">6/25</string>
    <string name="birthday_textView">Birthday</string>
    <string name="birthday_textView2">We want to celebrate it with you</string>
    <string name="birthMonth_label">Month</string>
    <string name="birthDay_label">Day</string>
    <string name="settings_birthday_btnCancel">Cancel</string>
    <string name="settings_birthday_btnOK">OK</string>
    <string name="settings_alarmSetting_textView">Alarm Setting</string>
    <string name="settings_Mission_textView">Mission</string>
    <string name="settings_General_textView">General</string>
    <string name="settings_FAQ_textView">FAQ</string>
    <string name="settings_About_textView">About</string>
    <string name="AlarmSettingPage_main_title">Alarm Setting</string>
    <string name="newAlarmDefaultSetting">New Alarm Default Setting</string>
    <string name="settings_alarmSetting_Mission_textView">Mission</string>
    <string name="settings_alarmSetting_Mission_details_txtView">Shake</string>
    <string name="settings_alarmSetting_Mission_details_txtViewMath">Math</string>
    <string name="settings_alarmSetting_Mission_details_txtViewMemory">Memory</string>
    <string name="defaultAlarm_changeAlarmMission_label">Mission</string>
    <string name="defaultAlarm_changeAlarmMission_mission_shake_title">Shake</string>
    <string name="defaultAlarm_changeAlarmMission_mission_math_title">Math</string>
    <string name="defaultAlarm_changeAlarmMission_mission_memory_title">Memory</string>
    <string name="defaultAlarm_changeMission_btnCancel">Cancel</string>
    <string name="defaultAlarm_changeMission_btnOK">OK</string>
    <string name="settings_alarmSetting_Ringtone_textView">Ringtone</string>
    <string name="settings_alarmSetting_Ringtone_details_txtView">Ringtone 1</string>
    <string name="settings_alarmSetting_Ringtone_details_txtViewRing2">Ringtone 2</string>
    <string name="settings_alarmSetting_Ringtone_details_txtViewRing3">Ringtone 3</string>
    <string name="settings_alarmSetting_Ringtone_details_txtViewRing4">Ringtone 4</string>
    <string name="defaultAlarm_changeAlarmRingtone_label">Ringtone</string>
    <string name="defaultAlarm_changeAlarmRingtone_rb1_text">Ringtone 1</string>
    <string name="defaultAlarm_changeAlarmRingtone_rb2_text">Ringtone 2</string>
    <string name="defaultAlarm_changeAlarmRingtone_rb3_text">Ringtone 3</string>
    <string name="defaultAlarm_changeAlarmRingtone_rb4_text">Ringtone 4</string>
    <string name="defaultAlarm_changeRingtone_btnCancel">Cancel</string>
    <string name="defaultAlarm_changeRingtone_btnOK">OK</string>
    <string name="settings_alarmSetting_wakeTime_textView">Wake Time</string>
    <string name="settings_alarmSetting_wakeTime_details_txtView">07:30</string>
    <string name="settings_alarmSetting_sleepTime_textView">Sleep Time</string>
    <string name="settings_alarmSetting_sleepTime_details_txtView">23:30</string>
    <string name="MissionPage_main_title">Mission</string>
    <string name="missionDismissalDuration">Mission Dismissal</string>
    <string name="settings_mission_autoDismiss_textView">Auto dismiss</string>
    <string name="settings_mission_autoDismiss_details_txtView">2 minutes</string>
    <string name="settings_mission_autoDismiss_details_txtView3min">3 minutes</string>
    <string name="settings_mission_autoDismiss_details_txtView4min">4 minutes</string>
    <string name="settings_mission_autoDismiss_details_txtView5min">5 minutes</string>
    <string name="settingsMission_changeAutoDismiss_label">Auto Dismiss</string>
    <string name="settingsMission_changeAutoDismiss_rb1_text">2 minutes</string>
    <string name="settingsMission_changeAutoDismiss_rb2_text">3 minutes</string>
    <string name="settingsMission_changeAutoDismiss_rb3_text">4 minutes</string>
    <string name="settingsMission_changeAutoDismiss_rb4_text">5 minutes</string>
    <string name="settingsMission_changeAutoDismiss_btnCancel">Cancel</string>
    <string name="settingsMission_changeAutoDismiss_btnOK">OK</string>
    <string name="missionDifficulty">Mission Difficulty</string>
    <string name="settings_mission_shakeDif_textView">Shake</string>
    <string name="settings_mission_shakeDif_details_txtView">Normal</string>
    <string name="settings_mission_shakeDif_details_txtViewEasy">Easy</string>
    <string name="settings_mission_shakeDif_details_txtViewHard">Hard</string>
    <string name="settingsMission_changeShakeDif_label">Shake</string>
    <string name="settingsMission_changeShakeDif_Status">Normal</string>
    <string name="settingsMission_changeShakeDif_StatusEasy">Easy</string>
    <string name="settingsMission_changeShakeDif_StatusHard">Hard</string>
    <string name="settingsMission_changeShakeDif_sliderTipEasy">Easy</string>
    <string name="settingsMission_changeShakeDif_sliderTipHard">Hard</string>
    <string name="settingsMission_changeShakeDif_btnCancel">Cancel</string>
    <string name="settingsMission_changeShakeDif_btnOK">OK</string>
    <string name="settings_mission_mathDif_textView">Math</string>
    <string name="settings_mission_mathDif_details_txtView">Normal</string>
    <string name="settings_mission_mathDif_details_txtViewEasy">Easy</string>
    <string name="settings_mission_mathDif_details_txtViewHard">Hard</string>
    <string name="settingsMission_changeMathDif_label">Math</string>
    <string name="settingsMission_changeMathDif_Status">Normal</string>
    <string name="settingsMission_changeMathDif_StatusEasy">Easy</string>
    <string name="settingsMission_changeMathDif_StatusHard">Hard</string>
    <string name="settingsMission_changeMathDif_sliderTipEasy">Easy</string>
    <string name="settingsMission_changeMathDif_sliderTipHard">Hard</string>
    <string name="settingsMission_changeMathDif_btnCancel">Cancel</string>
    <string name="settingsMission_changeMathDif_btnOK">OK</string>
    <string name="settings_mission_memoryDif_textView">Memory</string>
    <string name="settings_mission_memoryDif_details_txtView">Normal</string>
    <string name="settings_mission_memoryDif_details_txtViewEasy">Easy</string>
    <string name="settings_mission_memoryDif_details_txtViewHard">Hard</string>
    <string name="settingsMission_changeMemoryDif_label">Memory</string>
</resources>