<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsMission_changeShakeDif_bottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background_1"
    android:orientation="vertical">

    <TextView
        android:id="@+id/settingsMission_changeShakeDif_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_bold"
        android:gravity="left"
        android:paddingLeft="30dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/settingsMission_changeShakeDif_label"
        android:textColor="?attr/SMBSSD_main_title_color"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/settingsMission_changeShakeDif_Status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/settingsMission_changeShakeDif_Status"
        android:textColor="?attr/SMBSSD_dif_status_color"
        android:textSize="24sp" />

    <com.google.android.material.slider.Slider
        android:id="@+id/settingsMission_changeShakeDif_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:stepSize="20.0"
        android:theme="@style/appTheme"
        android:valueFrom="0.0"
        android:valueTo="40.0"
        app:labelBehavior="gone"
        app:thumbColor="#238ae6"
        app:tickColor="?attr/SMBSSD_slider_tick_color"
        app:trackColorActive="#238ae6"
        app:trackColorInactive="#a7bada" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/settingsMission_changeShakeDif_sliderTipEasy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/settingsMission_changeShakeDif_sliderTipEasy"
            android:textColor="?attr/SMBSSD_tip_easy_color"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settingsMission_changeShakeDif_sliderTipHard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/settingsMission_changeShakeDif_sliderTipHard"
            android:textColor="?attr/SMBSSD_tip_hard_color"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/settingsMission_changeShakeDif_btnCancel"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bottom_sheet_negative_button_background"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/settingsMission_changeShakeDif_btnCancel"
            android:textColor="?attr/bs_button_cancel_text_color"
            android:textSize="16sp"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/settingsMission_changeShakeDif_btnOK"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bottom_sheet_positive_button_background"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/settingsMission_changeShakeDif_btnOK"
            android:textColor="?attr/bs_button_ok_text_color"
            android:textSize="16sp"
            app:backgroundTint="@null" />

    </LinearLayout>

</LinearLayout>