<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settingsMission_changeAutoDismiss_bottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background_1"
    android:orientation="vertical">

    <TextView
        android:id="@+id/settingsMission_changeAutoDismiss_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_bold"
        android:gravity="left"
        android:paddingLeft="30dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/settingsMission_changeAutoDismiss_label"
        android:textColor="?attr/SMBSAD_main_title_color"
        android:textSize="20sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/settingsMission_changeAutoDismiss_rb1_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:text="@string/settingsMission_changeAutoDismiss_rb1_text"
            android:textColor="?attr/SMBSAD_details_color"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settingsMission_changeAutoDismiss_rb2_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/settingsMission_changeAutoDismiss_rb2_text"
            android:textColor="?attr/SMBSAD_details_color"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@+id/settingsMission_changeAutoDismiss_rb1_text"
            app:layout_constraintTop_toBottomOf="@+id/settingsMission_changeAutoDismiss_rb1_text" />

        <TextView
            android:id="@+id/settingsMission_changeAutoDismiss_rb3_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/settingsMission_changeAutoDismiss_rb3_text"
            android:textColor="?attr/SMBSAD_details_color"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@+id/settingsMission_changeAutoDismiss_rb2_text"
            app:layout_constraintTop_toBottomOf="@+id/settingsMission_changeAutoDismiss_rb2_text" />

        <TextView
            android:id="@+id/settingsMission_changeAutoDismiss_rb4_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/settingsMission_changeAutoDismiss_rb4_text"
            android:textColor="?attr/SMBSAD_details_color"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@+id/settingsMission_changeAutoDismiss_rb3_text"
            app:layout_constraintTop_toBottomOf="@+id/settingsMission_changeAutoDismiss_rb3_text" />

        <RadioGroup
            android:id="@+id/settingsMission_changeAutoDismiss_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/settingsMission_changeAutoDismiss_rb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/settingsMission_changeAutoDismiss_rb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/settingsMission_changeAutoDismiss_rb3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/settingsMission_changeAutoDismiss_rb4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/settingsMission_changeAutoDismiss_btnCancel"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bottom_sheet_negative_button_background"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/settingsMission_changeAutoDismiss_btnCancel"
            android:textColor="?attr/bs_button_cancel_text_color"
            android:textSize="16sp"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/settingsMission_changeAutoDismiss_btnOK"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bottom_sheet_positive_button_background"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/settingsMission_changeAutoDismiss_btnOK"
            android:textColor="?attr/bs_button_ok_text_color"
            android:textSize="16sp"
            app:backgroundTint="@null" />

    </LinearLayout>

</LinearLayout>