<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/db_background_color"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/birthday_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/birthday_textView"
        android:textColor="?attr/db_main_title_color"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/birthday_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/birthday_textView2"
        android:textColor="?attr/db_desc_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthday_textView" />

    <LinearLayout
        android:id="@+id/number_picker_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthday_textView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/birthMonth_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthMonth_label"
                android:textColor="?attr/db_details_color"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/np_birth_month"
                app:layout_constraintStart_toStartOf="@+id/np_birth_month"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/birthDay_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthDay_label"
                android:textColor="?attr/db_details_color"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/np_birth_day"
                app:layout_constraintStart_toStartOf="@+id/np_birth_day"
                app:layout_constraintTop_toTopOf="parent" />

            <NumberPicker
                android:id="@+id/np_birth_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:theme="@style/numberPickerTheme"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/birthMonth_label" />

            <NumberPicker
                android:id="@+id/np_birth_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:theme="@style/numberPickerTheme"
                app:layout_constraintStart_toEndOf="@+id/np_birth_month"
                app:layout_constraintTop_toBottomOf="@+id/birthDay_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


    <Button
        android:id="@+id/settings_birthday_btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:backgroundTint="?attr/al_button_cancel_background_color"
        android:text="@string/settings_birthday_btnCancel"
        android:textAllCaps="false"
        android:textColor="?attr/al_button_cancel_text_color"
        app:layout_constraintBottom_toBottomOf="@+id/settings_birthday_btnOK"
        app:layout_constraintEnd_toStartOf="@+id/settings_birthday_btnOK"
        app:layout_constraintTop_toTopOf="@+id/settings_birthday_btnOK" />

    <Button
        android:id="@+id/settings_birthday_btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="?attr/al_button_ok_background_color"
        android:text="@string/settings_birthday_btnOK"
        android:textAllCaps="false"
        android:textColor="?attr/al_button_ok_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_picker_linear_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>